--- a/Webstack/bower.json
+++ b/Webstack/bower.json
@@ -14,7 +14,8 @@
     "angular-bootstrap": "~0.11.0",
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
-    "angular-qrcode": "monospaced/angular-qrcode#~5.1.0"
+    "angular-qrcode": "monospaced/angular-qrcode#~5.1.0",
+    "angular-socket-io": "~0.7.0"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
