--- a/Webstack/bower.json
+++ b/Webstack/bower.json
@@ -15,7 +15,9 @@
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
     "angular-qrcode": "monospaced/angular-qrcode#~5.1.0",
-    "angular-socket-io": "~0.7.0"
+    "angular-socket-io": "~0.7.0",
+    "ng-file-upload": "~4.2.0",
+    "ng-file-upload-shim": "~4.2.0"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
