--- a/Webstack/package.json
+++ b/Webstack/package.json
@@ -18,6 +18,7 @@
     "method-override": "~1.0.0",
     "mongoose": "~3.8.8",
     "morgan": "~1.0.0",
+    "multiparty": "^4.1.2",
     "passport": "~0.2.0",
     "passport-local": "~0.1.6",
     "serve-favicon": "~2.0.1",
