--- a/Android/AtTable/app/src/main/AndroidManifest.xml
+++ b/Android/AtTable/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="kr.ac.kaist.mobile.attable" >
 
+
+    <!-- Internet permission -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -16,6 +20,24 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
+
+
+
+        <!-- Parse Menu Items Activity -->
+        <activity
+            android:label="Parsing"
+            android:name=".ParseMenuItems" >
+        </activity>
+
+
+        <!-- Single List Item Activity -->
+        <activity
+            android:label="Contact"
+            android:name=".SingleContactActivity" >
+        </activity>
     </application>
+
 
 </manifest>
