Add basic order overview

--- a/Android/AtTable/app/src/main/AndroidManifest.xml
+++ b/Android/AtTable/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
             android:name=".OrderSelect"
             android:label="@string/title_activity_order_select" >
         </activity>
+        <activity
+            android:name=".OrderOverview"
+            android:label="@string/title_activity_order_overview" >
+        </activity>
     </application>
 
 </manifest>
